test_fixtures/unexpected_character.lox
// ScannerError: UnexpectedCharacter | at l3c7
// ParserError: UnexpectedToken found Identifier at l3c9 expected CloseParen
foo(a | b);
